# ros-docker-beginners-playground

./: .gitignore  README.md  requirements.md  start_linux.sh
demo_package/: CMakeLists.txt  package.xml  requirements.txt  setup.py
demo_package/launch/: notebook.launch
demo_package/scripts/: laser_navigation.ipynb  start_notebook.sh
docker/: Dockerfile  docker-compose-linux-nvidia.yaml  docker-compose-linux.yaml  docker-compose-windows.yaml  ros_entrypoint.sh
ros_ws/demo_package/launch/: demo_bringup.launch
ros_ws/demo_package/rviz/: package_demo.rviz
ros_ws/demo_package/scripts/: follow_the_gap.py
ros_ws/demo_package/worlds/: willowgarage.world
